# rest-jwt-permission

./: .gitignore  .travis.yml  LICENSE  README.md  dev-requirements.in  dev-requirements.txt  requirements.in  requirements.txt  setup.cfg  setup.py
rest_jwt_permission/: __init__.py  apps.py  handlers.py  permissions.py  settings.py  utils.py
rest_jwt_permission/management/commands/: show_roles.py
rest_jwt_permission/providers/: __init__.py  admin.py  api_endpoint.py  base.py  utils.py
rest_jwt_permission/scopes/: __init__.py  api.py  base.py  simple.py  utils.py
rest_jwt_permission_tests/: conftest.py  factories.py  settings.py  test_handlers.py  test_permissions.py  test_scopes.py  test_utils.py  urls.py
rest_jwt_permission_tests/providers/: test_admin_provider.py  test_api_endpoint_provider.py  test_providers.py
