[metadata]
description-file = README.md

[tool:pytest]
django_find_project = false
norecursedirs = .git venv .env

[flake8]
exclude = .git,__pycache__
max-complexity = 20
max-line-length = 120

[isort]
line_length=120
indent=4
known_third_party=django
known_first_party=rest_jwt_permission
multi_line_output=5
length_sort=false

[coverage:run]
branch = True
source=rest_jwt_permission/

[coverage:html]
directory = coverage
